[package]
name = "rustp2p"
version = "0.1.0"
authors = ["Dan Rammer <hamersaw@gmail.com>"]
license = "MIT"
repository = "https://github.com/hamersaw/rustp2p"
build = "build.rs"

[lib]
name = "rustp2p"
path = "src/lib.rs"

[[bin]]
name = "rustp2p"
path = "src/main.rs"

[build-dependencies]
capnpc = "0.5.0"

[dependencies]
capnp = "0.5.0"
bincode = "0.4.0"
rustc-serialize = "0.3.0"
